--- a/dotnet8/src/BlogBlazorApp/appsettings.json
+++ b/dotnet8/src/BlogBlazorApp/appsettings.json
@@ -1,9 +1,16 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MongoDbLocal": "mongodb://localhost:27017/?readPreference=primary&appname=BlogBlazorApp&directConnection=true&ssl=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "MongoDb": {
+    "ConnectionStringName": "MongoDbLocal",
+    "DatabaseName": "blog_blazor"
+  }
 }
