--- a/dotnet8/src/BlogBlazorApp.Client/BlogBlazorApp.Client.csproj
+++ b/dotnet8/src/BlogBlazorApp.Client/BlogBlazorApp.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -13,6 +13,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BlogSharedComponents\BlogSharedComponents.csproj" />
   </ItemGroup>
 
 </Project>
